--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -11,6 +11,7 @@
     "@ridi/logger": "workspace:^",
     "@ridi/maps-api": "workspace:^",
     "@ridi/messaging": "workspace:^",
+    "@ridi/stripe-api": "workspace:^",
     "@supabase/supabase-js": "^2.48.1",
     "@ts-rest/serverless": "^3.51.0",
     "@turf/turf": "^7.2.0",
