--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 SUPABASE_AUTH_GITHUB_CLIENT_ID=xxxxx
 SUPABASE_AUTH_GITHUB_SECRET=xxxx
+SUPABASE_AUTH_GOOGLE_CLIENT_ID=xxxxx
+SUPABASE_AUTH_GOOGLE_SECRET=xxxx
