--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -24,6 +24,7 @@
     "@maplibre/maplibre-react-native": "10.0.0-alpha.22",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@nanostores/react": "^0.8.0",
+    "@protomaps/basemaps": "^5.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -73,6 +74,7 @@
     "moti": "^0.30.0",
     "nanostores": "^0.11.3",
     "nativewind": "^4.0.1",
+    "pmtiles": "^4.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
