feat: sentry for cf worker

--- a/services/cfw-api/.dev.vars.example
+++ b/services/cfw-api/.dev.vars.example
@@ -6,3 +6,5 @@ STRIPE_SECRET_KEY="xxxxxxxxxxxxxxx"
 STRIPE_PRICE_ID_MONTLY="xxxxxxxxx"
 STRIPE_PRICE_ID_YEARLY="xxxxxxxx"
 STRIPE_WEBHOOK_SECRET="xxxxxxxxx"
+SENTRY_DSN="xxxxxxxxxx"
+RIDI_ENV="dev"
