--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -12,6 +12,7 @@
     "@ridi/maps-api": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "@ridi/stripe-api": "workspace:^",
+    "@sentry/cloudflare": "^9.8.0",
     "@supabase/supabase-js": "^2.48.1",
     "@ts-rest/serverless": "^3.51.0",
     "@turf/turf": "^7.2.0",
