--- a/services/queue-service/.env.base
+++ b/services/queue-service/.env.base
@@ -1,2 +1,2 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
-ROUTER_SERVICE_LIST='{"europe/latvia":"127.0.0.1:2727","europe/greece":"127.0.0.1:2728"}'
+ROUTER_SERVICE_LIST='{"europe/latvia":"127.0.0.1:2727","europe/greece":"127.0.0.1:2729","europe/estonia":"127.0.0.1:2728"}'
