feat: map preview wip

--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -31,3 +31,9 @@ procs:
   router-service-tsc:
     shell: "pnpm run tsc --watch"
     cwd: "./services/router-service/"
+  map-preview-service:
+    shell: "node --import=tsx --watch-path=./src --env-file=.env.base src/index.ts | pino-pretty"
+    cwd: "./services/map-preview-service/"
+  map-preview-service-tsc:
+    shell: "pnpm run tsc --watch"
+    cwd: "./services/map-preview-service/"
