--- a/services/queue-service/.env.base
+++ b/services/queue-service/.env.base
@@ -1,2 +1,3 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 ROUTER_SERVICE_LIST='{"europe/latvia":"127.0.0.1:2727","europe/greece":"127.0.0.1:2729","europe/estonia":"127.0.0.1:2728"}'
+MAP_PREVIEW_SERVICE_URL="127.0.0.1:2730"
