--- a/libs/geo-maps/tsconfig.json
+++ b/libs/geo-maps/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "@total-typescript/tsconfig/bundler/no-dom/library-monorepo", // For a library in a monorepo
   "exclude": ["**/node_modules/**/*"],
-  "include": [
-    "src/**/*.ts",
-    "../../services/map-preview-service-old/src/map-preview.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "types": ["node"]
