--- a/services/map-preview-service/tsconfig.json
+++ b/services/map-preview-service/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "@total-typescript/tsconfig/bundler/no-dom/library-monorepo", // For a library in a monorepo
+  "extends": "@total-typescript/tsconfig/bundler/dom/app",
   "exclude": ["**/node_modules/**/*"],
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "types": ["node"],
+    "jsx": "react-jsx",
     "lib": ["dom"]
   }
 }
