--- a/services/queue-service/package.json
+++ b/services/queue-service/package.json
@@ -14,6 +14,7 @@
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "@ridi/router-service-contracts": "workspace:^",
+    "@ridi/map-preview-service-contracts": "workspace:^",
     "@ts-rest/core": "^3.51.0",
     "postgres": "^3.4.5",
     "typescript": "^5.8.1-rc",
