--- a/services/cfw-api/wrangler.toml
+++ b/services/cfw-api/wrangler.toml
@@ -14,6 +14,8 @@ SUPABASE_URL = "https://sb.ridi.bike"
 RIDI_APP_URL = "https://app.ridi.bike"
 SENTRY_DSN = "https://57ef996c2cdb0754386a7cfa02783c4f@o337283.ingest.us.sentry.io/4509016159420416"
 RIDI_ENV = "prod"
+STRIPE_PRICE_ID_MONTLY = "price_1R3NmnDgjvIEDQY4z7U8tBji"
+STRIPE_PRICE_ID_YEARLY = "price_1R3NnVDgjvIEDQY49Yf3KGGP"
 
 # Note: Use secrets to store sensitive data.
 # https://developers.cloudflare.com/workers/configuration/secrets/
