--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -92,6 +92,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
+    "throttle-debounce": "^5.0.2",
     "xksuid": "^0.0.4",
     "zod": "^3.24.1",
     "zod-geojson": "^0.0.3"
@@ -102,6 +103,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/throttle-debounce": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "51.0.4",
     "react-test-renderer": "18.2.0"
