fix: map preview deploymnet

--- a/services/map-preview-service/package.json
+++ b/services/map-preview-service/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --import=tsx --watch-path=./src --env-file=.env.base ./src/server/server.ts --dev | pino-pretty ",
-    "start": "node --import=tsx --watch-path=./src --env-file=.env.base ./src/server/server.ts | pino-pretty ",
+    "dev": "node --import=tsx --watch-path=./src --env-file=.env.base ./src/server.ts --dev | pino-pretty ",
+    "start": "node --import=tsx --watch-path=./src --env-file=.env.base ./src/server.ts | pino-pretty ",
     "build": "vite build",
     "tsc": "tsc"
   },
@@ -17,6 +17,7 @@
     "@ridi/messaging": "workspace:^",
     "@ts-rest/fastify": "^3.52.0",
     "@vis.gl/react-maplibre": "1.0.0-alpha.4",
+    "aws-sdk": "^2.1692.0",
     "fastify": "^5.2.1",
     "maplibre-gl": "^4.7.1",
     "pmtiles": "^4.3.0",
