--- a/infra/map-preview-service/Containerfile
+++ b/infra/map-preview-service/Containerfile
@@ -3,6 +3,8 @@ FROM node:23-bookworm AS build
 WORKDIR /app
 
 ARG PORT
+ARG USER_ID=1000
+ARG GROUP_ID=1000
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 ENV CHROME_BIN=/usr/bin/google-chrome
@@ -14,6 +16,9 @@ RUN apt-get update && apt-get install gnupg wget -y && \
   apt-get install google-chrome-stable -y --no-install-recommends && \
   rm -rf /var/lib/apt/lists/*
 
+RUN groupadd -g $GROUP_ID nodeuser && \
+    useradd -u $USER_ID -g nodeuser -s /bin/bash -m nodeuser
+
 RUN npm install -g pnpm
 
 COPY ./libs/ ./libs
@@ -23,8 +28,12 @@ COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 RUN pnpm install
 
-# RUN pnpm run --filter=@ridi/map-preview-service build
+RUN pnpm run --filter=@ridi/map-preview-service build
+
+RUN chown -R nodeuser:nodeuser /app
+
+USER nodeuser
 
 EXPOSE ${PORT}
 
-CMD ["node", "--import=tsx", "./services/map-preview-service/src/server/server.ts", "--dev"]
+CMD ["node", "--import=tsx", "./services/map-preview-service/src/server.ts"]
