--- a/services/map-preview-service/.env.base
+++ b/services/map-preview-service/.env.base
@@ -1,3 +1,4 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 PORT=2730
 CHROME_BIN=/usr/bin/google-chrome-stable
+PUPPETEER_WINDOWED=true
