feat: map rendering

--- a/services/map-preview-service/.env.base
+++ b/services/map-preview-service/.env.base
@@ -1,7 +1,7 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 PORT=2730
 CHROME_BIN=/usr/bin/google-chrome-stable
-PUPPETEER_WINDOWED=true
+PUPPETEER_WINDOWED=false
 R2_ENDPOINT=https://10fa0049d716d7ffc146dcd87113908c.r2.cloudflarestorage.com
 MAP_DATA_BUCKET=ridi-maps-dev
 BUCKET_URL=https://pub-8a145efca3454143bda673326ecb6127.r2.dev
