--- a/services/map-preview-service/package.json
+++ b/services/map-preview-service/package.json
@@ -13,12 +13,14 @@
     "@aws-sdk/client-s3": "^3.777.0",
     "@fastify/vite": "8.0.0-alpha.2",
     "@protomaps/basemaps": "^5.0.0",
+    "@ridi/geo-maps": "workspace:^",
     "@ridi/logger": "workspace:^",
     "@ridi/map-preview-service-contracts": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "@ts-rest/fastify": "^3.52.0",
     "@vis.gl/react-maplibre": "1.0.0-alpha.4",
     "fastify": "^5.2.1",
+    "lucide-react": "^0.486.0",
     "maplibre-gl": "^4.7.1",
     "pmtiles": "^4.3.0",
     "puppeteer": "^24.4.0",
