feat: show images on app

--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -29,6 +29,7 @@
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
     "@ridi/api-contracts": "workspace:^",
+    "@ridi/geo-maps": "workspace:^",
     "@ridi/maps-api": "workspace:^",
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/label": "^1.0.4",
@@ -57,6 +58,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
+    "expo-image": "^1.13.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
