--- a/services/queue-service/package.json
+++ b/services/queue-service/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@ridi/db-queries": "workspace:^",
     "@ridi/logger": "workspace:^",
+    "@ridi/map-preview-service-contracts": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "@ridi/router-service-contracts": "workspace:^",
-    "@ridi/map-preview-service-contracts": "workspace:^",
     "@ts-rest/core": "^3.51.0",
+    "axios": "^1.8.4",
     "postgres": "^3.4.5",
     "typescript": "^5.8.1-rc",
     "zod": "^3.24.1"
