--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -11,7 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build:android": "eas build --profile development --platform android",
-    "build:web": "expo export -p web",
+    "build:web": "expo export -p web --dump-sourcemap && sentry-expo-upload-sourcemaps dist",
     "tsc": "tsc --watch",
     "type-check": "node ./scripts/type-check.mjs"
   },
