--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -2,7 +2,8 @@
   "name": "@ridi/cfw-api",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify --outdir dist && pnpm run sentry:sourcemaps",
+    "build": "wrangler deploy --dry-run --minify --outdir dist && pnpm run sentry:sourcemaps",
+    "deploy": "wrangler deploy --no-bundle --outdir dist",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org hood-software --project ridi-apps-api ./dist && sentry-cli sourcemaps upload --org hood-software --project ridi-apps-api ./dist"
   },
@@ -25,7 +26,6 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250129.0",
-    "wrangler": "^3.107.2"
+    "wrangler": "^4.12.0"
   }
 }
-
