fix: sentry cli

--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -39,6 +39,7 @@
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
+    "@sentry/cli": "^2.42.4",
     "@sentry/react-native": "^6.9.1",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/query-async-storage-persister": "^5.66.0",
