--- a/services/geo-boundary-init/Cargo.toml
+++ b/services/geo-boundary-init/Cargo.toml
@@ -11,6 +11,8 @@ lto = true
 opt-level = 3
 
 [dependencies]
+geo = "0.30.0"
+geo-types = "0.7.16"
 osmpbfreader = "0.19.0"
 postgres = "0.19.10"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -18,3 +20,4 @@ serde_json = "1.0.140"
 thiserror = "2.0.12"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["json"] }
+wkt = "0.12.0"
