fix: posthog on expo

--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -57,7 +57,8 @@
           "project": "ridi-apps-expo",
           "organization": "hood-software"
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
