--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -54,16 +54,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.38",
+    "expo-application": "~5.9.1",
     "expo-auth-session": "^5.5.2",
     "expo-background-fetch": "~12.0.1",
     "expo-build-properties": "~0.12.5",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image": "^1.13.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-location": "~17.0.1",
     "expo-network": "~6.0.1",
     "expo-router": "~3.5.23",
@@ -81,6 +85,8 @@
     "nanostores": "^0.11.3",
     "nativewind": "^4.0.1",
     "pmtiles": "^4.3.0",
+    "posthog-react-native": "^3.15.0",
+    "posthog-react-native-session-replay": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
