--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -85,6 +85,7 @@
     "nanostores": "^0.11.3",
     "nativewind": "^4.0.1",
     "pmtiles": "^4.3.0",
+    "posthog-js": "^1.236.7",
     "posthog-react-native": "^3.15.0",
     "posthog-react-native-session-replay": "^1.0.6",
     "react": "18.2.0",
