feat: product analytics

--- a/apps/expo-app/.env.example
+++ b/apps/expo-app/.env.example
@@ -2,3 +2,4 @@ EXPO_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
 EXPO_PUBLIC_SUPABASE_ANON_KEY=xxx
 EXPO_PUBLIC_API_URL=http://127.0.0.1:8787
 EXPO_PUBLIC_SENTRY_DSN=https://xxxxxxx
+EXPO_PUBLIC_POSTHOG_KEY=xxxxxxx
