feat: waiting list

--- a/services/cfw-api/.dev.vars.example
+++ b/services/cfw-api/.dev.vars.example
@@ -8,3 +8,5 @@ STRIPE_PRICE_ID_YEARLY="xxxxxxxx"
 STRIPE_WEBHOOK_SECRET="xxxxxxxxx"
 SENTRY_DSN="xxxxxxxxxx"
 RIDI_ENV="dev"
+RESEND_KEY="xxxxxx"
+RESEND_AUD_GENERAL_ID="xxxxxx"
