--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -24,6 +24,7 @@
     "pino": "^9.6.0",
     "postgres": "^3.4.5",
     "remeda": "^2.20.0",
+    "resend": "^4.5.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
