feat: add new users to resend

--- a/services/queue-service/.env.base
+++ b/services/queue-service/.env.base
@@ -1,3 +1,5 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 ROUTER_SERVICE_LIST='{"europe/latvia":"127.0.0.1:2727","europe/greece":"127.0.0.1:2729","europe/estonia":"127.0.0.1:2728"}'
 MAP_PREVIEW_SERVICE_URL="127.0.0.1:2730"
+RESEND_SECRET="re_VoDEukMp_7t7nCMJEdbMBRGSwtB6T2eKf"
+RESEND_AUDIENCE_ID="226e0e44-d07c-416d-9abb-0d88110ef628"
