--- a/services/queue-service/package.json
+++ b/services/queue-service/package.json
@@ -18,6 +18,7 @@
     "@ts-rest/core": "^3.51.0",
     "axios": "^1.8.4",
     "postgres": "^3.4.5",
+    "resend": "^4.5.1",
     "typescript": "^5.8.1-rc",
     "zod": "^3.24.1"
   },
