--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -18,8 +18,8 @@
     "astro": "^4.15.5",
     "astro-navbar": "^2.3.3",
     "clsx": "^2.1.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11"
