--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -3,7 +3,7 @@
   "main": "index.tsx",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --clear",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -22,123 +22,112 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^4.0.1",
-    "@expo/vector-icons": "^14.0.4",
-    "@maplibre/maplibre-react-native": "10.0.0-alpha.22",
+    "@expo/metro-runtime": "^5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@maplibre/maplibre-react-native": "10.1.6",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@nanostores/react": "^0.8.0",
-    "@protomaps/basemaps": "^5.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "11.3.1",
-    "@react-navigation/native": "^6.0.2",
+    "@nanostores/react": "^1.0.0",
+    "@protomaps/basemaps": "^5.4.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-navigation/native": "^7.1.6",
     "@ridi/api-contracts": "workspace:^",
     "@ridi/geo-maps": "workspace:^",
     "@ridi/maps-api": "workspace:^",
-    "@rn-primitives/alert-dialog": "^1.1.0",
-    "@rn-primitives/label": "^1.0.4",
-    "@rn-primitives/popover": "^1.1.0",
-    "@rn-primitives/portal": "^1.1.0",
-    "@rn-primitives/slot": "^1.0.4",
-    "@rn-primitives/types": "^1.0.4",
-    "@sentry/cli": "^2.42.4",
-    "@sentry/react-native": "^6.9.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "@tanstack/query-async-storage-persister": "^5.66.0",
-    "@tanstack/query-persist-client-core": "^5.66.0",
-    "@tanstack/react-query": "^5.66.0",
-    "@trpc/client": "11.0.0-rc.576",
-    "@trpc/server": "11.0.0-rc.576",
-    "@ts-rest/core": "^3.51.0",
+    "@rn-primitives/alert-dialog": "^1.2.0",
+    "@rn-primitives/label": "^1.2.0",
+    "@rn-primitives/popover": "^1.2.0",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
+    "@sentry/cli": "^2.46.0",
+    "@sentry/react-native": "^6.15.1",
+    "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/query-async-storage-persister": "^5.80.7",
+    "@tanstack/query-persist-client-core": "^5.80.7",
+    "@tanstack/react-query": "^5.80.7",
+    "@trpc/client": "11.4.1",
+    "@trpc/server": "11.4.1",
+    "@ts-rest/core": "^3.52.1",
     "@turf/turf": "^7.2.0",
-    "@vis.gl/react-maplibre": "1.0.0-alpha.4",
-    "babel-plugin-react-compiler": "19.0.0-beta-8a03594-20241020",
-    "class-variance-authority": "^0.7.0",
+    "@vis.gl/react-maplibre": "8.0.4",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~51.0.38",
-    "expo-application": "~5.9.1",
-    "expo-auth-session": "^5.5.2",
-    "expo-background-fetch": "~12.0.1",
-    "expo-build-properties": "~0.12.5",
-    "expo-clipboard": "~6.0.3",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.28",
-    "expo-device": "~6.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image": "^1.13.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-location": "~17.0.1",
-    "expo-network": "~6.0.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-task-manager": "~11.8.2",
-    "expo-web-browser": "~13.0.3",
+    "expo": "~53.0.11",
+    "expo-application": "~6.1.4",
+    "expo-auth-session": "^6.2.0",
+    "expo-background-fetch": "~13.1.5",
+    "expo-build-properties": "~0.14.6",
+    "expo-clipboard": "~7.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
+    "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.10",
+    "expo-font": "~13.3.1",
+    "expo-image": "^2.3.0",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-localization": "~16.1.5",
+    "expo-location": "~18.1.5",
+    "expo-network": "~7.1.5",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.8",
+    "expo-task-manager": "~13.1.5",
+    "expo-web-browser": "~14.1.6",
     "geojson": "^0.5.0",
-    "gpx-builder": "^5.4.0",
-    "idb-keyval": "^6.2.1",
-    "lucide-react-native": "^0.441.0",
-    "maplibre-gl": "^4.7.1",
+    "gpx-builder": "^5.6.0",
+    "idb-keyval": "^6.2.2",
+    "lucide-react-native": "^0.516.0",
+    "maplibre-gl": "^5.6.0",
     "moti": "^0.30.0",
-    "nanostores": "^0.11.3",
-    "nativewind": "^4.0.1",
+    "nanostores": "^1.0.1",
+    "nativewind": "^4.1.23",
     "pmtiles": "^4.3.0",
-    "posthog-js": "^1.236.7",
-    "posthog-react-native": "^3.15.0",
-    "posthog-react-native-session-replay": "^1.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.2",
-    "react-native-mmkv": "^2.12.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "posthog-js": "^1.254.0",
+    "posthog-react-native": "^4.1.0",
+    "posthog-react-native-session-replay": "^1.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "remeda": "^2.16.0",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.12",
+    "react-native-web": "~0.20.0",
+    "remeda": "^2.23.0",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "throttle-debounce": "^5.0.2",
     "xksuid": "^0.0.4",
-    "zod": "^3.24.1",
-    "zod-geojson": "^0.0.3"
+    "zod": "^3.25.67",
+    "zod-geojson": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.27.4",
+    "@expo/metro-config": "^0.20.14",
     "@expo/webpack-config": "^19.0.1",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/jest": "^30.0.0",
+    "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "^19.1.0",
     "@types/throttle-debounce": "^5.0.2",
-    "jest": "^29.2.1",
-    "jest-expo": "51.0.4",
-    "react-test-renderer": "18.2.0"
+    "jest": "^29.7.0",
+    "jest-expo": "53.0.7",
+    "react-test-renderer": "19.1.0"
   },
   "private": true,
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
         "enabled": true,
-        "exclude": [
-          "@rn-primitives/label",
-          "@rn-primitives/slot",
-          "@rn-primitives/types",
-          "class-variance-authority",
-          "clsx",
-          "tailwind-merge",
-          "tailwindcss",
-          "tailwindcss-animate",
-          "xksuid",
-          "@vis.gl/react-maplibre",
-          "maplibre-gl"
-        ]
+        "exclude": []
       }
     }
   }
