--- a/libs/store-with-schema/tsconfig.json
+++ b/libs/store-with-schema/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@total-typescript/tsconfig/bundler/no-dom/library-monorepo", // For a library in a monorepo
   "exclude": ["**/node_modules/**/*"],
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/hooks.ts"],
   "compilerOptions": {
     "allowImportingTsExtensions": true
   }
