--- a/apps/expo-app/tsconfig.json
+++ b/apps/expo-app/tsconfig.json
@@ -5,7 +5,9 @@
     "noImplicitAny": true,
     "allowJs": false,
     "strictNullChecks": true,
-    // "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": true,
+    "composite": true,
+    "incremental": true,
     // "strictFunctionTypes": true,
     // "exactOptionalPropertyTypes": true,
     "jsx": "react-jsx",
