--- a/libs/map-preview-service-contracts/tsconfig.json
+++ b/libs/map-preview-service-contracts/tsconfig.json
@@ -7,6 +7,8 @@
   ],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
+    "composite": true,
+    "incremental": true,
     "types": ["node"]
   }
 }
