--- a/services/cfw-api/tsconfig.json
+++ b/services/cfw-api/tsconfig.json
@@ -3,15 +3,12 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "composite": true,
+    "incremental": true,
     "strict": true,
     "skipLibCheck": true,
-    "lib": [
-      "ESNext"
-    ],
-    "types": [
-        "@cloudflare/workers-types/2023-07-01"
-    ],
+    "lib": ["ESNext"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
-  },
+  }
 }
