--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -13,7 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.15.5",
     "astro-navbar": "^2.3.3",
