--- a/libs/messaging/tsconfig.json
+++ b/libs/messaging/tsconfig.json
@@ -4,6 +4,8 @@
   "include": ["src/**/*.ts"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
+    "composite": true,
+    "incremental": true,
     "types": ["node"]
   }
 }
