--- a/libs/store-with-schema/tsconfig.json
+++ b/libs/store-with-schema/tsconfig.json
@@ -3,6 +3,8 @@
   "exclude": ["**/node_modules/**/*"],
   "include": ["src/**/*.ts", "src/hooks.ts"],
   "compilerOptions": {
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "composite": true,
+    "incremental": true
   }
 }
