--- a/services/cfw-api/wrangler.toml
+++ b/services/cfw-api/wrangler.toml
@@ -33,3 +33,10 @@ RESEND_AUD_GENERAL_ID = "226e0e44-d07c-416d-9abb-0d88110ef628"
 # [[services]]
 # binding = "MY_SERVICE"
 # service = "my-service"
+[[durable_objects.bindings]]
+name = "TinyBaseDurableObjects"
+class_name = "TinyBaseDurableObject"
+
+[[migrations]]
+tag = "v1"
+new_classes = ["TinyBaseDurableObject"]
