--- a/services/map-preview-service/package.json
+++ b/services/map-preview-service/package.json
@@ -24,7 +24,7 @@
     "maplibre-gl": "^4.7.1",
     "pmtiles": "^4.3.0",
     "puppeteer": "^24.4.0",
-    "react": "18.2.0",
+    "react": "19.0.0",
     "react-dom": "18.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.1-rc",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "globals": "^15.15.0",
