--- a/libs/logger/tsconfig.json
+++ b/libs/logger/tsconfig.json
@@ -1,11 +1,6 @@
 {
-  "extends": "@total-typescript/tsconfig/bundler/no-dom/library-monorepo", // For a library in a monorepo
-  "exclude": ["**/node_modules/**/*"],
-  "include": ["src/**/*.ts"],
+  "extends": "../../tsconfig.lib.json",
   "compilerOptions": {
-    "allowImportingTsExtensions": true,
-    "composite": true,
-    "incremental": true,
     "types": ["node"]
   }
 }
