feat: ts compile errors donw

--- a/apps/expo-app/tsconfig.json
+++ b/apps/expo-app/tsconfig.json
@@ -6,10 +6,9 @@
     "allowJs": false,
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
-    "composite": true,
+    "declaration": false,
     "incremental": true,
-    // "strictFunctionTypes": true,
-    // "exactOptionalPropertyTypes": true,
+    "noEmit": true,
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "strict": true,
