--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "tsx": "^4.19.3",
-    "typescript": "^5.8.1-rc"
+    "typescript": "^5.8.3"
   },
   "installConfig": {
     "pnp": false
