--- a/services/queue-service/package.json
+++ b/services/queue-service/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.8.4",
     "postgres": "^3.4.5",
     "resend": "^4.5.1",
-    "typescript": "^5.8.1-rc",
+    "typescript": "^5.8.3",
     "zod": "^3.25.73"
   },
   "devDependencies": {
