--- a/services/map-data-init/package.json
+++ b/services/map-data-init/package.json
@@ -15,7 +15,7 @@
     "@ridi/messaging": "workspace:^",
     "@tmcw/togeojson": "^6.0.1",
     "postgres": "^3.4.5",
-    "typescript": "^5.8.1-rc",
+    "typescript": "^5.8.3",
     "xmldom": "^0.6.0",
     "zod": "^3.25.73"
   },
