--- a/services/router-cache-init/package.json
+++ b/services/router-cache-init/package.json
@@ -13,7 +13,7 @@
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "json-nd": "^1.0.0",
-    "typescript": "^5.8.1-rc",
+    "typescript": "^5.8.3",
     "zod": "^3.25.73"
   },
   "devDependencies": {
