--- a/services/router-service/package.json
+++ b/services/router-service/package.json
@@ -16,7 +16,7 @@
     "@ts-rest/fastify": "^3.52.1",
     "fastify": "^5.2.1",
     "json-nd": "^1.0.0",
-    "typescript": "^5.8.1-rc",
+    "typescript": "^5.8.3",
     "zod": "^3.25.73"
   },
   "devDependencies": {
