--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -58,7 +58,8 @@
           "organization": "hood-software"
         }
       ],
-      "expo-localization"
+      "expo-localization",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
