--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -74,6 +74,7 @@
     "expo-network": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.13",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-task-manager": "~13.1.5",
