--- a/libs/geo-maps/package.json
+++ b/libs/geo-maps/package.json
@@ -4,11 +4,11 @@
   "main": "src/index.ts",
   "type": "module",
   "dependencies": {
-    "@protomaps/basemaps": "^5.0.0",
+    "@protomaps/basemaps": "^5.4.1",
     "@turf/turf": "^7.2.0",
-    "@vis.gl/react-maplibre": "1.0.0-alpha.4",
+    "@vis.gl/react-maplibre": "8.0.4",
     "geojson": "^0.5.0",
     "maplibre-gl": "^4.7.1",
-    "react": "18.2.0"
+    "react": "19.0.0"
   }
 }
