--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -10,18 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/react": "^4.0.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "astro": "^4.15.5",
-    "astro-navbar": "^2.3.3",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.3.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.11.1",
+    "astro-navbar": "^2.4.0",
     "clsx": "^2.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.11"
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
   }
 }
