--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -23,5 +23,8 @@
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
