--- a/infra/package.json
+++ b/infra/package.json
@@ -3,6 +3,7 @@
   "main": "index.ts",
   "dependencies": {
     "@pulumi/cloudflare": "^6.4.1",
+    "@pulumi/command": "^1.1.0",
     "@pulumi/docker-build": "^0.0.10",
     "@pulumi/kubernetes": "^4.0.0",
     "@pulumi/pulumi": "^3.113.0"
