--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -13,7 +13,7 @@
     "lint": "expo lint",
     "version-update": "node ./scripts/version-create.mjs",
     "build:android": "eas build --profile development --platform android",
-    "build:web": "pnpm run release:web:new && expo export -p web --dump-sourcemap && pnpm run version-update && sentry-expo-upload-sourcemaps dist && pnpm run release:web:fin",
+    "build:web": "expo export -p web --dump-sourcemap && pnpm run version-update && sentry-expo-upload-sourcemaps dist",
     "release:web:new": "sentry-cli releases new \"ridi-apps-expo@$(sentry-cli releases propose-version)\" && sentry-cli releases set-commits \"ridi-apps-expo@$(sentry-cli releases propose-version)\" --auto --ignore-missing",
     "release:web:fin": "sentry-cli releases finalize \"ridi-apps-expo@$(sentry-cli releases propose-version)\"",
     "tsc": "tsc --watch",
