--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -2,7 +2,7 @@
   "name": "@ridi/cfw-api",
   "scripts": {
     "dev": "wrangler dev",
-    "build": "pnpm run release:new && wrangler deploy --dry-run --minify --outdir dist && pnpm run sentry:sourcemaps",
+    "build": "wrangler deploy --dry-run --minify --outdir dist && pnpm run sentry:sourcemaps",
     "deploy": "wrangler deploy --no-bundle ./dist/index.js && pnpm run release:fin",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "release:new": "sentry-cli releases new \"ridi-apps-api@$(sentry-cli releases propose-version)\" && sentry-cli releases set-commits \"ridi-apps-api@$(sentry-cli releases propose-version)\" --auto --ignore-missing",
