--- a/.github/workflows/deploy-full-stack.yaml
+++ b/.github/workflows/deploy-full-stack.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: ${{ github.event.inputs.stack }}
 
     steps:
