fix: more fixes

--- a/services/cfw-api/.dev.vars.example
+++ b/services/cfw-api/.dev.vars.example
@@ -8,6 +8,6 @@ STRIPE_PRICE_ID_MONTLY="xxxxxxxxx"
 STRIPE_PRICE_ID_YEARLY="xxxxxxxx"
 STRIPE_WEBHOOK_SECRET="xxxxxxxxx"
 SENTRY_DSN="xxxxxxxxxx"
-RIDI_ENV="dev"
+RIDI_ENV="local"
 RESEND_KEY="xxxxxx"
 RESEND_AUD_GENERAL_ID="xxxxxx"
