--- a/apps/expo-app/.env.example
+++ b/apps/expo-app/.env.example
@@ -3,3 +3,4 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=xxx
 EXPO_PUBLIC_API_URL=http://127.0.0.1:8787
 EXPO_PUBLIC_SENTRY_DSN=https://xxxxxxx
 EXPO_PUBLIC_POSTHOG_KEY=xxxxxxx
+EXPO_PUBLIC_RIDI_ENV=local
