fix: husky in docker

--- a/infra/router-cache-init/Dockerfile
+++ b/infra/router-cache-init/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:23-bookworm AS build
 
+ENV DOCKER_ENV="true"
+
 WORKDIR /app
 
 ARG ROUTER_VERSION
@@ -18,6 +20,7 @@ RUN npm install -g pnpm
 COPY ./libs/ ./libs
 COPY ./services/router-cache-init ./services/router-cache-init
 COPY ./package.json ./package.json
+COPY ./husky.sh ./husky.sh
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 RUN pnpm install --prod
