--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "container:build:ridi-router": "podman build -f ./infra/router-service/Containerfile --build-arg-file=./services/router-service/.env.latvia -t=ridi-router-service .",
     "container:run:ridi-router": "podman run --env-file=./services/router-service/.env ridi-router-service",
-    "prepare": "husky"
+    "prepare": "./husky.sh"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
