--- a/infra/map-data-init/Dockerfile
+++ b/infra/map-data-init/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:23-bookworm AS build
 
+ENV DOCKER_ENV="true"
+
 WORKDIR /app
 
 RUN npm install -g pnpm
@@ -7,6 +9,7 @@ RUN npm install -g pnpm
 COPY ./libs/ ./libs
 COPY ./services/map-data-init ./services/map-data-init
 COPY ./package.json ./package.json
+COPY ./husky.sh ./husky.sh
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 RUN pnpm install --prod
