--- a/infra/map-preview-service/Dockerfile
+++ b/infra/map-preview-service/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:23-bookworm AS build
 
+ENV DOCKER_ENV="true"
+
 WORKDIR /app
 
 ARG PORT
@@ -21,6 +23,7 @@ RUN npm install -g pnpm
 COPY ./libs/ ./libs
 COPY ./services/map-preview-service ./services/map-preview-service
 COPY ./package.json ./package.json
+COPY ./husky.sh ./husky.sh
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 RUN pnpm install
