--- a/services/queue-service/.env.base
+++ b/services/queue-service/.env.base
@@ -3,3 +3,4 @@ ROUTER_SERVICE_LIST='{"europe/latvia":"127.0.0.1:2727","europe/greece":"127.0.0.
 MAP_PREVIEW_SERVICE_URL="127.0.0.1:2730"
 RESEND_SECRET="re_VoDEukMp_7t7nCMJEdbMBRGSwtB6T2eKf"
 RESEND_AUDIENCE_ID="226e0e44-d07c-416d-9abb-0d88110ef628"
+API_URL=http://127.0.0.1:8787
